
2007-0x-xx  -  PgBouncer 1.1  -  ""

  = Features =

  * Database connect string enhancements:
    - Accept hostname in host=
    - Accept custom unix socket location in host=
    - Accept quoted values: password=' asd''foo'
  * server_reset_query, to be sent immidiately after release
  * Keep track of following server variables:
      client_encoding, datestyle, timezone, standard_conforming_strings
  * Cancel pkt sent for idle connection does not drop it anymore.
  * Cancel with ^C from psql works for SUSPEND / PAUSE.
  * Print FD limits on startup.
  * When suspending, try to hit packet boundary ASAP.

  = Code cleanup =

  * More debug log messages include socket info.
  * Magic number removal and error message cleanup. (David Fetter)
  * Wrapper struct for current pkt info.  Removes lot of compexity.

  = Fixes =

  * Detect invalid pkt headers better.

2007-06-18  -  PgBouncer 1.0.8  -  "Undead Shovel Jutsu"

  = Fixes =

  * Fix crash in cancel packet handling. (^C from psql)

  = Features =

  * PAUSE <db>; RESUME <db>; works now.
  * Cleanup of console command parsing.
  * Disable expensive in-list assert check.

2007-04-19  -  PgBouncer 1.0.7  -  "With Vitamin A-Z"

  * Several error/notice packets with send() blocking between
    triggered assert.  Fix it by removing flushing logic altogether.
    As pgbouncer does not actively buffer anything, its not needed.
    It was a remnant from the time when buffering was pushed to
    kernel with MSG_MORE.
  * Additionally avoid calling recv() logic when sending unblocks.
  * List search code for admin_users and stats_users
    mishandled partial finds.  Fix it.
  * Standardise UNIX socket peer UID finding to getpeereid().

2007-04-12  -  PgBouncer 1.0.6  -  "Daily Dose"

  * The "Disable maintenance during the takeover" fix could
    disable maintenance altogether.  Fix it.
  * Compilation fix for FreeBSD, <sys/ucred.h> requires <sys/param.h> there.
    Thanks go to Robert Gogolok for report.
