@@ -1,4 +1,14 @@
 
-Marko Kreen <marko.kreen@skype.net>	- main coder
-Martin Pihlak <martin.pihlak@skype.net>	- head inquisitor
+Main author
+-----------
+
+Marko Kreen
+
+Contributors
+------------
+
+David Fetter
+Dimitri Fontaine
+Martin Pihlak
+Robert Gogolok
 
