@@ -3,17 +3,22 @@
 
   = Features =
 
+  * Keep track of following server parameters:
+
+      client_encoding  datestyle, timezone, standard_conforming_strings
+
   * Database connect string enhancements:
     - Accept hostname in host=
     - Accept custom unix socket location in host=
     - Accept quoted values: password=' asd''foo'
+
   * server_reset_query, to be sent immidiately after release
-  * Keep track of following server variables:
-      client_encoding, datestyle, timezone, standard_conforming_strings
+
   * Cancel pkt sent for idle connection does not drop it anymore.
   * Cancel with ^C from psql works for SUSPEND / PAUSE.
   * Print FD limits on startup.
   * When suspending, try to hit packet boundary ASAP.
+  * Add 'timezone' to database parameters.
 
   = Code cleanup =
 
